Fix alignment of site names opposite their icons (#3)

--- a/assets/css/table.scss
+++ b/assets/css/table.scss
@@ -241,8 +241,8 @@
 
   .logo {
     margin-right: 0.7em;
-    height: 2.5em;
-    max-width: 2.5em;
+    max-height: 2.5em;
+    width: 2.5em;
     vertical-align: middle;
   }
 }
